[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Workspace packages
core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
