[package]
name = "public-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Workspace packages
lambda-client = { workspace = true }
core = { workspace = true }
